# fm

./: .gitignore  2022-09-22-Note-23-47.xopp  Cargo.toml  LICENSE.txt  build.rs  config.yaml  development.md  fm.sh  hello  hello.c  log0  log1  log2  lsblk.json  lsblk.txt  nohup.out  opener.yaml  readme.md  stderr.log  test_keybind.yaml
assets/themes/: monokai.themedump
config_files/fm/: cli.yaml  config.yaml  logging_config.yaml  opener.yaml  previewer.yaml  previewer.yml  session.yaml  tuis.yaml
config_files/fm/themes/: ansi.yaml  catpuccin.yml  default.yaml  default.yml  dracula.yaml  grey.yaml  monokai.yaml  monokai.yml  nord.yml  tokyonight.yaml  tokyonight.yml
plugin_api/: Cargo.toml
plugin_api/src/: context.rs  lib.rs
plugins/bat_previewer/: Cargo.toml
plugins/bat_previewer/src/: extensions.rs  lib.rs
plugins/flagged/: Cargo.toml
plugins/flagged/src/: lib.rs
plugins/hello_world/: Cargo.toml
plugins/hello_world/src/: lib.rs
python_test/: while_sleep.py
src/: action_map.rs  actioner.rs  actions.rs  app.rs  args.rs  args_better.rs  bulkrename.rs  cli_info.rs  color_cache.rs  colors.rs  completion.rs  compress.rs  config.rs  config_file.rs  constant_strings_paths.rs  content_window.rs  copy_move.rs  cryptsetup.rs  custom_parser.rs  decompress.rs  display.rs  event_char.rs  event_dispatch.rs  event_exec.rs  file_window.rs  fileinfo.rs  filter.rs  flagged.rs  fm_error.rs  fmconfig.rs  git.rs  help.rs  indexed_vector.rs  input.rs  iso.rs  keybindings.rs  last_edition.rs  lib.rs  log.rs  luks.rs  (+27 more)
src/app/: application.rs  display_settings.rs  displayer.rs  first_line.rs  header_footer.rs  internal_settings.rs  mod.rs  preview_workers.rs  previewer.rs  previewer_plugins.rs  pw2.rs  refresher.rs  session.rs  status.rs  tab.rs  thumbnailer.rs
src/common/: constant_strings_paths.rs  format.rs  mod.rs  mode.rs  random.rs  utils.rs
src/config/: cloud_config.rs  colors.rs  configurable_static.rs  configuration.rs  default_config.rs  gradient.rs  keybindings.rs  mod.rs  oncelock_static.rs
src/display_mode/: fileinfo.rs  lsl.rs  mod.rs  preview.rs  skim.rs  tree.rs
src/edit_mode/: bulkrename.rs  cli_info.rs  completion.rs  compress.rs  copy_move.rs  cryptsetup.rs  decompress.rs  filter.rs  flagged.rs  help.rs  history.rs  iso.rs  mocp.rs  mod.rs  mount_help.rs  password.rs  removable_devices.rs  selectable_content.rs  shell_menu.rs  shell_parser.rs  shortcut.rs  sort.rs  trash.rs
src/event/: action_map.rs  event_action.rs  event_dispatch.rs  event_exec.rs  event_poller.rs  events.rs  fm_events.rs  ipc_socket.rs  mod.rs  rpc_events.rs
src/google_drive_config_helper/: main.rs
src/interaction/: action_map.rs  event_dispatch.rs  event_exec.rs
src/io/: args.rs  commands.rs  display.rs  draw_menu.rs  git.rs  image_adapter.rs  inline_image_protocol.rs  input_history.rs  line.rs  log.rs  mod.rs  opendal.rs  opener.rs  plugin_management.rs  poller.rs  specific_commands.rs  term_manager.rs  ueberzug.rs
src/modes/: mod.rs  mode.rs
src/modes/display/: cache_previews.rs  content_window.rs  directory.rs  fileinfo.rs  fuzzy.rs  image.rs  lsl.rs  mod.rs  nucleo_picker.rs  preview.rs  preview_holder.rs  skim.rs  tree.rs  uber.rs  ueberzug.rs  users.rs
src/modes/edit/: bulkrename.rs  cli_info.rs  cli_menu.rs  completion.rs  compress.rs  context.rs  copy_move.rs  cryptsetup.rs  decompress.rs  filter.rs  flagged.rs  help.rs  history.rs  input.rs  iso.rs  leave_mode.rs  line_display.rs  marks.rs  menu.rs  menu_trait.rs  mocp.rs  mod.rs  mount_help.rs  new_bulkrename.rs  new_search.rs  node_creation.rs  password.rs  permissions.rs  picker.rs  regex.rs  removable_devices.rs  search.rs  second_line.rs  selectable_content.rs  shell_menu.rs  shell_parser.rs  shortcut.rs  sort.rs  trash.rs  tui_menu.rs
src/modes/fs/: extension.rs  fileinfo.rs  icon.rs  mod.rs  users.rs
src/modes/menu/: bulkrename.rs  cli_menu.rs  completion.rs  compress.rs  context.rs  copy_move.rs  cryptsetup.rs  decompress.rs  filter.rs  flagged.rs  help.rs  history.rs  input.rs  iso.rs  marks.rs  mod.rs  mount.rs  node_creation.rs  nvim.rs  password.rs  permissions.rs  picker.rs  regex.rs  remote.rs  removable_devices.rs  search.rs  shortcut.rs  sort.rs  temp_marks.rs  trash.rs  tui_menu.rs
src/modes/utils/: ansi.rs  content_window.rs  leave_menu.rs  leave_mode.rs  line_display.rs  menu.rs  menu_holder.rs  mod.rs  mount_help.rs  second_line.rs  selectable_content.rs  shell_escape.rs  shell_parser.rs
