[package]
name = "fm-tui"
version = "0.1.28"
authors = ["Quentin Konieczko <qu3nt1n@gmail.com>"]
edition = "2021"
license-file = "LICENSE.txt"
description = "FM : a file manager inspired by ranger and dired{n}{n}Config files   ~/.config/fm/{n}Documentation  https://github.com/qkzk/fm{n}"
readme = "readme.md"
repository = "https://github.com/qkzk/fm"
keywords = ["tui", "file-manager", "file", "manager", "tuikit"]
categories = ["command-line-utilities", "filesystem", "os::unix-apis"]
documentation = "https://docs.rs/fm-tui/latest/"
default-run = "fm"

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
lto = true # instructs the linker to optimize at the link stage.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "fm"
path = "src/main.rs"

[lib]
name = "fm"
path = "src/lib.rs"

[build-dependencies]
fs_extra = "1.2.0"

[dependencies]
anyhow = "1.0.88"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
content_inspector = "0.2.4"
copypasta = "0.10.1"
flate2 = "1.0"
fs_extra = "1.3.0"
indicatif = { version = "0.17.8", features= ["in_memory"] }
log = { version = "0.4.22", features = ["std"] }
log4rs = { version = "1.3.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
nvim-rs = { version = "0.7", features = ["use_tokio"] }
oauth2 = "4.4.2"
opendal = { version = "0.49.2", features = ["services-gdrive"] }
pathdiff = "0.2.1"
pgs-files = "0.0.7"
regex = "1.10.6"
rust-lzma = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12" # test serde_yml
skim-qkzk = "0.9.14"
strfmt = "0.2.2"
strum = {version = "0.24.1", features = ["derive"]}
strum_macros = "0.24.3"
syntect = "5.0.0"
sysinfo = "0.29.0"
tar = "0.4.38"
tokio = "1"
tuikit = "0.5.0"
ueberzug = "0.1.0"
unicode-segmentation = "1.10.1"
url = "2.1"
url-escape = "0.1.1"
zip = "2.1.6"
