[package]
name = "fm-tui"
version = "0.1.32"
authors = ["Quentin Konieczko <qu3nt1n@gmail.com>"]
edition = "2021"
license-file = "LICENSE.txt"
description = "FM : a file manager inspired by ranger and dired{n}{n}Config files   ~/.config/fm/{n}Documentation  https://github.com/qkzk/fm{n}"
readme = "readme.md"
repository = "https://github.com/qkzk/fm"
keywords = ["tui", "file-manager", "file", "manager", "tuikit"]
categories = ["command-line-utilities", "filesystem", "os::unix-apis"]
documentation = "https://docs.rs/fm-tui/latest/"
default-run = "fm"

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
lto = true # instructs the linker to optimize at the link stage.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "fm"
path = "src/main.rs"

[lib]
name = "fm"
path = "src/lib.rs"

[build-dependencies]
fs_extra = "1.2.0"

[dependencies]
anyhow = "1.0.90"
beef = "0.5.2"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
content_inspector = "0.2.4"
copypasta = "0.10.1"
crossterm = "0.28.1"
flate2 = "1.0"
fs_extra = "1.3.0"
indicatif = { version = "0.17.8", features= ["in_memory"] }
log = { version = "0.4.22", features = ["std"] }
log4rs = { version = "1.3.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
nucleo = "0.5.0"
nvim-rs = { version = "0.7", features = ["use_tokio"] }
oauth2 = "4.4.2"
opendal = { version = "0.49.2", features = ["services-gdrive"] }
pathdiff = "0.2.1"
pgs-files = "0.0.7"
ratatui = "0.28.1" 
regex = "1.10.6"
rust-lzma = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12" # test serde_yml
strfmt = "0.2.4"
strum = {version = "0.26.3", features = ["derive"]}
strum_macros = "0.26.4"
syntect = "5.0.0"
sysinfo = "0.31.4"
sevenz-rust = "0.6.1"
tar = "0.4.38"
tokio = {version = "1", features = ["full"] }
ueberzug = "0.1.0"
unicode-segmentation = "1.11.0"
url = "2.5.2"
url-escape = "0.1.1"
vte = "0.13.0"
walkdir = "2.5.0"
zip = "2.2.0"
